IntelliJ auto-fixup